# post-mortem

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: release-sidecar.yml  test.yml
docs/: DEVELOPING.md  INSTALLATION.md  MIGRATING_TEXT_CONSUMERS.md  PHASE_1_IMPLEMENTATION.md  PHASE_2_IMPLEMENTATION.md  PHASE_3_IMPLEMENTATION.md  PRIVACY.md  PRODUCT_PLAN.md  PROVIDER_ADAPTERS.md  SIDECAR_PROTOCOL.md  SPEC.md  STRUCTURED_RESULTS.md  TROUBLESHOOTING.md  manual.html
docs/examples/: kick_near_clipping.result.json
evaluations/: capture_snapshot.py
evaluations/results/: 2026-07-11-model-benchmark.md  2026-07-11-model-contract-v2-benchmark.md  2026-07-11-model-contract-v3-benchmark.md  README.md
evaluations/results/deepseek-v4-flash-2026-07-11-contract-v2/: backing_vocal_healthy_stereo.json  (+25 more)
packaging/: README.md  archive_bundle.py  postmortem-sidecar.spec  sidecar_entry.py  smoke_bundle.py  verify_open_core_artifact.py
postmortem/: __init__.py  analysis.py  bridge.py  cli.py  config.py  constants.py  diagnose.py  evaluation.py  launcher.py  preview.py  proposals.py  readiness.py  schemas.py  service.py  verification.py
postmortem/providers/: __init__.py  anthropic_provider.py  base.py
tests/: test_analysis.py  test_bridge_config.py  test_cli.py  test_diagnose.py  test_diagnosis_contract.py  test_launcher.py  test_masking.py  test_open_core_boundary.py  test_packaging.py  test_preview.py  test_proposals.py  test_providers.py  test_schemas.py  test_service.py  test_verification.py
(+138 files in other folders)
